--- a/backend/templates/signup.html
+++ b/backend/templates/signup.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 
+<script>
+    function sendData(){
+        alert("tes")
+    }
+</script>
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Sign Up</h3>
     <div class="box">
-        <form method="POST" action="/auth/signup">
+        <form method="POST">
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
@@ -20,7 +25,7 @@
                     <input class="input is-large" type="password" name="password" placeholder="Password">
                 </div>
             </div>
-            <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+            <button id="signup-button" class="button is-block is-info is-large is-fullwidth" onclick="sendData()">Sign Up</button>
         </form>
     </div>
 </div>
